# deckshot

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  main.py  package.json  plugin.json
.github/workflows/: tip.yml
backend/: .gitignore  Cargo.toml  Dockerfile  entrypoint.sh
backend/src/: config.rs  database.rs
backend/src/uploaders/: dropbox.rs  mod.rs  s3.rs
contrib/: deckshot.service  deckshot.yml  install.sh  uninstall.sh
defaults/: deckshot.yml
src/: config.rs  database.rs  index.tsx  main.rs  steam.rs
src/uploaders/: discord.rs  dropbox.rs  gdrive.rs  imgur.rs  mod.rs  noop.rs  onedrive.rs  s3.rs
