[package]
name = "deckshot"
version = "0.1.0"
authors = ["Antoine POPINEAU"]
description = "Automatic screenshot uploader for the Steam Deck"
license = "MIT"

edition = "2021"

[profile.release]
strip = "debuginfo"
opt-level = "s"
lto = "thin"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.60"
base64 = "0.21.0"
clap = "4.0.32"
dropbox-sdk = { version = "0.15.0", default-features = false, features = ["default_client", "dbx_files"] }
futures = "0.3.25"
google-drive3 = "5.0.2-beta-1"
imgurs-client = "0.2.0"
imgurs-model = "0.2.0"
kvlogger = "0.5.0"
log = "*"
notify = "5.0.0"
oauth2 = "4.3.0"
onedrive-api = { version = "0.9.0", default-features = false }
pickledb = { version = "0.5.1", default-features = false, features = ["bincode"] }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls"] }
rust-s3 = {version = "0.32.3", default-features = false, features = ["tokio-rustls-tls"] }
serde = "^1.0"
serde_json = "^1.0"
serde_yaml = "0.9.16"
serenity = { version = "0.11", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend"] }
tokio = { version = "^1.23", features = ["macros", "rt-multi-thread", "sync", "io-util"] }
rand = "0.8.5"

[dev-dependencies]
